fix(tools modal): fixed height issue in tools modal on safari and changed text colour of button hover

--- a/src/components/ui/Button/style.module.scss
+++ b/src/components/ui/Button/style.module.scss
@@ -99,6 +99,7 @@
     --btn-clr: var(--clr-slate-400);
     --btn-text-clr: var(--clr-light-400);
     --btn-fill-hover-clr: var(--clr-slate-600);
+    --btn-fill-hover-text-clr: var(--clr-light-400);
   }
 
   &--clr-bittersweet {
