--- a/src/styles/base/_dialog.scss
+++ b/src/styles/base/_dialog.scss
@@ -29,7 +29,7 @@ dialog {
 
   &[open] {
     animation: fadeIn var(--transition-duration-fast) ease-in-out forwards;
-    display: grid;
+    display: block;
 
     &::backdrop {
       animation: backdropFade var(--transition-duration-slow) ease-in-out forwards;
